--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "my_site",
   "version": "0.1.0",
+  "homepage": "https://chaumontlouis718.github.io",
   "private": true,
   "dependencies": {
     "@emotion/react": "^11.9.0",
@@ -20,7 +21,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -41,6 +44,7 @@
     ]
   },
   "devDependencies": {
+    "gh-pages": "^4.0.0",
     "sass": "^1.50.0"
   }
 }
