--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "my_site",
   "version": "0.1.0",
-  "homepage": "https://chaumontlouis718.github.io",
+  "homepage": "https://chaumontlouis718.github.io/chaumontlouis718.github.io",
   "private": true,
   "dependencies": {
     "@emotion/react": "^11.9.0",
