--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "my_site",
   "version": "0.1.0",
-  "homepage": "https://chaumontlouis718.github.io/chaumontlouis718.github.io",
+  "homepage": "https://chaumontlouis718.github.io",
   "private": true,
   "dependencies": {
     "@emotion/react": "^11.9.0",
@@ -16,6 +16,9 @@
     "react-router-dom": "^6.3.0",
     "react-scripts": "^5.0.1",
     "web-vitals": "^2.1.4"
+  },
+  "overrides": {
+    "nth-check": "2.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
